# cmake

cmake/: CMakeLists.txt
cmake/A/: index.h  preparing.py
cmake/B/: CMakeList.txt  lib.cpp
cmake/C/: main.cpp  main.h
